/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package xts.config;

option java_package = "com.google.devtools.mobileharness.platform.android.xts.config.proto";
option java_outer_classname = "ConfigurationProto";

message ConfigurationMetadata {
  string xts_module = 1;
}

message Option {
  string name = 1;
  string key = 2;
  string value = 3;
}

message TargetPreparer {
  string clazz = 1;
  repeated Option options = 2;
}

message Device {
  string name = 1;
  repeated TargetPreparer target_preparers = 2;
}

message Test {
  string clazz = 1;
  repeated Option options = 2;
}

message Configuration {
  ConfigurationMetadata metadata = 1;
  string description = 2;
  repeated Option options = 3;
  repeated Device devices = 4;
  Test test = 5;
}
